# mikupush

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE.md  README.md  THIRD_PARTY_LICENSES.md  about.html  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: development.md
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  prelude.rs  upload.rs
helpers/macos-helpers/Miku Push! Helper.xcodeproj/: project.pbxproj
helpers/macos-helpers/Share/: ShareViewController.swift  icon.icns  share.entitlements
helpers/macos-helpers/Share/Base.lproj/: ShareViewController.xib
helpers/windows-helpers/: App.xaml  App.xaml.cs  Package.appxmanifest  README.md  app.manifest  windows-helpers.csproj  windows-helpers.sln
helpers/windows-helpers/Properties/: launchSettings.json
lib/client/: Cargo.toml
lib/client/src/: client.rs  error.rs  lib.rs  progress.rs  response.rs  server.rs  upload.rs
lib/common/: Cargo.toml
lib/common/src/: config.rs  date_time.rs  encoder.rs  error.rs  lib.rs  mime_type.rs  progress.rs  request.rs  server.rs  status.rs  theme.rs  upload.rs
lib/database/: Cargo.toml
lib/database/migrations/2025-10-06-172153_create_upload/: up.sql
lib/database/migrations/2025-10-10-134414_create_server/: up.sql
lib/database/migrations/2025-10-10-144915_insert_servers/: down.sql  up.sql
lib/database/migrations/2025-10-10-150356_config/: up.sql
lib/database/src/: config.rs  connection.rs  error.rs  lib.rs  schema.rs  server.rs  upload.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_upload_table.rs  main.rs
scripts/: add_license.ps1  add_license.sh  apply-version.sh  build-macos-helpers.sh  build-release.sh  license.py  license.ts  third-party-licences.ts
src/: AboutWindow.tsx  App.module.css  App.tsx  MainWindow.tsx  about.tsx  global.d.ts  i18n.ts  index.css  ipc.ts  main.rs  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: THIRD_PARTY_LICENSES.html
src-tauri/capabilities/: default.json
src-tauri/i18n/: en.yaml
src-tauri/icons/: icon.icns
src-tauri/icons/AppIcon.icon/: icon.json
src-tauri/macOS/: Entitlements.plist
src-tauri/src/: commands.rs  config.rs  database.rs  error.rs  events.rs  lib.rs  macos.rs  main.rs  menu.rs  models.rs  repository.rs  resources.rs  server.rs  server_client.rs  settings.rs  state.rs  upload.rs  window.rs
src-tauri/windows/fragments/: path.wxs  registry.wxs
src/components/: AppBar.tsx  AppSidebar.tsx  AppTitleBar.tsx  FileIcon.tsx  LoadingSpinner.tsx  SelectedServer.tsx  SidebarButtonMenuItem.tsx  SidebarLinkMenuItem.tsx  ThemeProvider.tsx  TitleBar.tsx  ToastContainer.tsx  Typography.tsx  UploadDropZone.tsx  UploadItem.tsx  UploadList.tsx  Uploads.tsx
src/components/AppTabs/: AppTabs.module.css  AppTabs.tsx
src/components/AppTitle/: AppTitle.module.css  AppTitle.tsx
src/components/FileIcon/: FileIcon.module.css  FileIcon.tsx
src/components/InputTab/: InputTab.css  InputTab.module.css  InputTab.tsx
src/components/UploadsFinishedTab/: UploadsFinishedTab.module.css  UploadsFinishedTab.tsx
src/components/UploadsProgressTab/: UploadsProgressTab.module.css  UploadsProgressTab.tsx
src/components/settings/: AutoStartField.tsx  ServerField.tsx  ThemeField.tsx  UploadFieldGroup.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  form.tsx  progress.tsx  select.tsx  sidebar.tsx
src/constants/: config.ts  delete_error.ts  upload_error.ts
src/context/: ServerProvider.tsx  ThemeProvider.tsx  upload.ts
src/helpers/: config.ts  file-select.ts  file.ts  format.ts  open.ts  rate.ts  resource.ts  upload.ts
src/hooks/: form.ts  server.ts  use-configuration.ts  use-mobile.ts
src/i18n/: en.json
src/layout/: DefaultLayout.tsx
src/lib/: utils.ts
src/model/: config.ts  events.ts  file-details.ts  server.ts  upload-progress.ts  upload-request.ts  upload.ts
src/pages/: ArchivedUploadsPage.tsx  SettingsPage.tsx  UploadsPage.tsx
src/store/: uploads.ts
