[package]
name = "mikupush_migration"
version = "0.1.0"
edition = "2021"
publish = false

[profile.dev]
incremental = true

[profile.test]
incremental = true


[lib]
name = "mikupush_migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-async-std-rustls",
  "sqlx-sqlite",
]
