[package]
name = "mikupush"
version = "0.1.0"
description = "A Tauri App"
authors = ["MikuPush"]
edition = "2024"

[profile.dev]
incremental = true

[profile.test]
incremental = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mikupush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mikupush_migration = { path = "../migration" }
mikupush_entity = { path = "../entity" }
mikupush_client = { path = "../lib/client" }
mikupush_common = { path = "../lib/common" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-single-instance = { version = "2.3.2", features = ["deep-link"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["full"] }
async-stream = "0.3.6"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4.27"
sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-async-std-rustls", "macros" ] }
rand = "0.8.5"
mimetype-detector = "0.1.1"
futures-core = "0.3.31"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
rust-i18n = "3.1.5"

[target."cfg(target_os = \"macos\")".dependencies]
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
objc2 = "0.6.2"
