[package]
name = "mikupush_common"
version = "0.0.0"
authors = ["MikuPush"]
edition = "2021"

[profile.dev]
incremental = true

[profile.test]
incremental = true

[lib]
name = "mikupush_common"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
mimetype-detector = "0.1.1"
url = "2.4"
base64 = "0.22.1"
log = "0.4.28"
regex = "1.12.2"
